--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Ryohei Ueda <garaemon@gmail.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "data-utils": "0.0.2",
     "hubot": "^2.16.0",
     "hubot-diagnostics": "0.0.1",
     "hubot-google-images": "^0.2.1",
