--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
     "hubot-sushiyuki": "0.0.11",
+    "hubot-weather-ja": "0.0.1",
     "moment": "^2.10.6"
   },
   "engines": {
