--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hubot-heroku-keepalive": "^1.0.0",
     "hubot-kakugen": "0.0.0",
     "hubot-maps": "0.0.2",
+    "hubot-pokemon": "^0.2.23",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
