--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Ryohei Ueda <garaemon@gmail.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "cheerio": "^0.19.0",
     "data-utils": "0.0.2",
     "hubot": "^2.16.0",
     "hubot-calculator": "^0.4.0",
@@ -24,7 +25,9 @@
     "hubot-slack": "^3.3.0",
     "hubot-sushiyuki": "0.0.11",
     "hubot-weather-ja": "0.0.1",
-    "moment": "^2.10.6"
+    "moment": "^2.10.6",
+    "q": "^1.4.1",
+    "request": "^2.62.0"
   },
   "engines": {
     "node": "0.10.x"
