--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "hubot-pokemon": "^0.2.23",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
+    "hubot-rss-reader": "^0.6.9",
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
